tests/allowedProcMountTypes/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-proc-mount-allowed
  labels:
    app: nginx-proc-mount
spec:
  containers:
  - name: nginx
    image: nginx
    # securityContext:
    #   procMount: Default
