tests/allowedProcMountTypes/gatekeeper.yaml
../../submodules/gatekeeper-library/library/pod-security-policy/proc-mount/samples/psp-proc-mount/constraint.yaml
